# multi-agentic-screener

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Procfile  README.md  alembic.ini  cleanup_run.py  pyproject.toml  requirements.txt  skills-lock.json
.github/workflows/: ci.yml  evening-collect.yml  mas-truth-paper.yml  pipeline-failure-alert.yml  scheduled-pipelines.yml
Gemini STST/: .gitignore  README.md  requirements.txt  run_pipeline.py  run_portfolio_backtest.py  run_reversion_backtest.py  run_tune_backtest.py
Gemini STST/app/: backtester.py  config.py  data_fetcher.py  database.py  engine_endpoint.py  indicators.py  main.py  mean_reversion.py  models.py  news_fetcher.py  notifier.py  options_flow.py  paper_tracker.py  prefilter.py  schemas.py  screener.py
Gemini STST/docs/: 01_prd.md  02_architecture.md  03_cursor_instructions.md  04_database_schema.md  05_backtesting_engine.md  06_fastapi_endpoints.md  07_frontend_html.md  08_frontend_js.md
Gemini STST/scripts/: head_to_head_scorecard.py  run_backtest.py
Gemini STST/static/: app.js  index.html  style.css
Gemini STST/tests/: test_data_fetcher.py  test_engine_endpoint_risk.py
KooCore-D/: .gitignore  CHANGES_REAL_PRICES.md  DASHBOARD_STATUS.md  DATA_SOURCES_GUIDE.md  INTEGRATION_SUMMARY.md  Notebook_model_validation.ipynb  Notebook_tracker_2025-11-12.ipynb  Notebook_tracker_2026-01.ipynb  PIPELINE_INVARIANTS.md  Procfile  README.md  RETRY_FLOW_DIAGRAM.md  RETRY_QUICK_REFERENCE.md  benchmark_fetch_speed.py  dashboard.html  final_verification.sh  main.py  requirements.txt  server.py  test_retry_logic.py  test_telegram_tracking.py  validate_v32_optimizations.py  verify_retry_guards.py  zip.md
alembic/: env.py
api/: app.py
configs/: backtest_default.yaml  experiment_log.yaml  multi_engine_backtest.yaml  tracks.yaml
dashboard/: app.js  index.html  style.css
docs/: 01_prompt.md  Chatgpt_v1.md  Claude_v1.md  Claude_v2.md  HEROKU_TO_GITHUB_MIGRATION.md  architecture_mvp.md  backtest_tuning_decision_2026-02-23.md  data_contracts.md  four_models.md  local_vs_http_ab_test_protocol.md  mvp_execution_plan.md  validation_contract.md
research/: .gitignore  README.md  requirements-research.txt
scripts/: analyze_weekday.py  backfill_dryrun_full.py  backfill_multi_engine_backtests.py  backfill_phantom_exits.py  cohort_replay.py  compare_engine_collection_modes.py  days_to_cover_probe.py  evaluate_multi_engine_robustness.py  evaluate_sniper_campaign.py  export_dashboard_data.py  gap_continuation_research.py  gap_intraday_probe.py  intraday_mr_probe.py  intraday_vwap_backtest.py  pead_backtest.py  pead_dry_run.py  pead_probe.py  reopen_phantom_outcomes.py  run_phase2_backtest.py  run_sniper_backtest.py  run_sniper_bear_research.py  run_v12_backtest.py  short_volume_probe.py  simulate_sniper_sleeve.py  sniper_component_ic.py  sniper_diagnostic.py  sniper_diagnostic2.py  sniper_equity_curve.py  sniper_scorecard.py  sniper_truth_matrix.py  truth_paper_manifest.py
src/: __init__.py  config.py  contracts.py  main.py  pipeline_types.py  worker.py
src/agents/: __init__.py  (+14 more)
static/: dashboard.css  dashboard.html  dashboard.js
templates/: daily_report.html  performance_report.html
tests/: conftest.py  test_agreement_analysis.py  test_backfill_phantom_exits.py  test_cohort_replay.py  test_contracts.py  test_dashboard.py  test_db_session.py  test_deterministic_synthesizer.py  test_engine_runs.py  test_hardening.py  test_manual_sleeve_retired.py  test_pipeline_cleanup.py  test_reliability_report.py  test_scheduler_config.py  test_signal_backtest.py  test_telegram_log.py  test_three_mode_runner.py  test_truth_paper_config.py  test_v12_alpha.py  test_validation_history_forwarding.py
(+396 files in other folders)
