[project]
name = "multi-agentic-screener"
version = "0.1.0"
description = "Multi-agentic short-term stock screener with LLM-powered signal validation"
requires-python = ">=3.12"
dependencies = [
    # Core
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",

    # Data
    "yfinance>=0.2",
    "pandas>=2.2",
    "numpy>=1.26",

    # Features
    "pandas-ta-openbb>=0.4",

    # Statistics
    "scipy>=1.12",

    # Backtesting
    "vectorbt>=0.26",

    # LLM
    "anthropic>=0.40",
    "openai>=1.50",

    # API + Reporting
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",

    # Alerts
    "python-telegram-bot>=21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring live API keys (deselected by default in CI)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/data/*_client.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100
