[project]
name = "multi-agentic-screener"
version = "0.1.0"
description = "Multi-agentic short-term stock screener with LLM-powered signal validation"
requires-python = ">=3.12"
dependencies = [
    # Core
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",

    # Data
    "yfinance>=0.2",
    "pandas>=2.2",
    "numpy>=1.26",

    # Features
    "pandas-ta-openbb>=0.4",

    # Statistics
    "scipy>=1.12",

    # Cross-engine HTTP client
    "aiohttp>=3.9",

    # LLM
    "anthropic>=0.40",
    "openai>=1.50",

    # API + Reporting
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "gunicorn>=22.0",
    "slowapi>=0.1.9",

    # Alerts
    "python-telegram-bot>=21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring live API keys (deselected by default in CI)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/data/*_client.py",
    "src/worker.py",
    "src/backtest/runner.py",
    "src/backtest/multi_engine/*",
    "src/engines/collector.py",
    "src/engines/credibility.py",
    "src/engines/outcome_resolver.py",
    "src/engines/backtest_comparator.py",
    "src/engines/koocore_adapter.py",
    "src/agents/cross_engine_synthesizer.py",
    "src/agents/cross_engine_verifier.py",
    "src/utils/trading_calendar.py",
]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E712: SQLAlchemy requires `== False`/`== True` for column comparisons (not `is`)
# F841: Some unused variables are intentional (e.g., unpacking, future use)
# E741: Ambiguous variable names (l, O, I) — acceptable in quant context
ignore = ["E712", "F841", "E741", "F821"]
